# backend-benchmark

./: .gitignore  README.md
python-fastapi/: .gitignore  Pipfile  README.md  setup.py  systemstats.csv
python-fastapi/contactserver/: main.py  repository.py
python-fastapi/server/: main.py
python-fastapi/test/: test_repository.py
reports/: cpuinfo  index.md
reports/01-run/: shell_pyton  shell_rust
reports/02-run/: shell_pyton  shell_rust
reports/03-run/: CPU_data.csv  CPU_python  CPU_rust  shell_python  shell_rust
reports/04-run/: shell
reports/06-run/: CPU_python_pg  CPU_python_server  CPU_rust_pg  CPU_rust_server  shell_python  shell_rust
reports/08-run-laptop/: CPU.xlsx  CPU2.xlsx  CPU_postgres_python  CPU_postgres_python.csv  CPU_postgres_rust  CPU_postgres_rust.csv  CPU_python  CPU_python.csv  CPU_rust  CPU_rust.csv
reports/09-run-laptop/: distribution.gnuplot
reports/utils/: psagg.sh
rust-tokio-hyper/: Cargo.toml  README.md
rust-tokio-hyper/src/: handler.rs  main.rs  repository.rs  router.rs
